@@ -7,6 +7,21 @@ architectury {
     fabric()
 }
 
+sourceSets {
+    testServer {
+        compileClasspath += main.compileClasspath + main.output
+        runtimeClasspath += main.runtimeClasspath + main.output
+        compileClasspath += project(':common').sourceSets.testServer.output
+        runtimeClasspath += project(':common').sourceSets.testServer.output
+    }
+    testClient {
+        compileClasspath += main.compileClasspath + main.output
+        runtimeClasspath += main.runtimeClasspath + main.output
+        compileClasspath += project(':common').sourceSets.testClient.output
+        runtimeClasspath += project(':common').sourceSets.testClient.output
+    }
+}
+
 configurations {
     common {
         canBeResolved = true
@@ -24,22 +39,72 @@ configurations {
     }
 }
 
+loom {
+    accessWidenerPath = project(':common').loom.accessWidenerPath
+
+    runs {
+        testServer {
+            server()
+            source sourceSets.testServer
+            vmArg "--enable-native-access=ALL-UNNAMED"
+            vmArg "-Dfabric-api.gametest"
+            vmArg "-Dfabric-api.gametest.report-file=${project.buildDir}/junit.xml"
+            runDir "build/testServer"
+        }
+        testClient {
+            client()
+            source sourceSets.testClient
+            ideConfigGenerated project.rootProject == project
+            runDir "build/testServer"
+        }
+    }
+}
+
+repositories {
+    maven { url "https://maven.terraformersmc.com/releases/" }
+    maven { url "https://maven.shedaniel.me/" }
+}
+
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:$rootProject.fabric_api_version"
 
-    modImplementation "dev.architectury:architectury-fabric:$rootProject.architectury_api_version"
+    // Fabric-specific dependencies
+    modImplementation "com.terraformersmc:modmenu:$rootProject.fabric_modmenu_version"
+
+    // Common dependencies for both platforms
+    modApi("me.shedaniel.cloth:cloth-config-fabric:${rootProject.clothconfig_version}") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    // SnakeYAML for config file parsing
+    modImplementation "org.yaml:snakeyaml:${rootProject.snakeyaml_version}"
+    include "org.yaml:snakeyaml:${rootProject.snakeyaml_version}"
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
+
+    // Test dependencies from common
+    testServerImplementation "com.github.javaparser:javaparser-symbol-solver-core:${rootProject.javaparser_version}"
+    testServerImplementation "org.bitbucket.mstrobel:procyon-compilertools:${rootProject.procyon_version}"
+    testServerImplementation "org.vineflower:vineflower:${rootProject.vineflower_version}"
 }
 
 processResources {
     inputs.property 'version', project.version
+    inputs.property 'minecraft_version', rootProject.minecraft_version
+    inputs.property 'fabric_loader_version', rootProject.fabric_loader_version
+    inputs.property 'modmenu_version', rootProject.fabric_modmenu_version
+    inputs.property 'clothconfig_version', rootProject.clothconfig_version
+    filteringCharset "UTF-8"
 
     filesMatching('fabric.mod.json') {
-        expand version: project.version
+        expand 'version': inputs.properties.version,
+                'minecraft_version': inputs.properties.minecraft_version,
+                'fabric_loader_version': inputs.properties.fabric_loader_version,
+                'modmenu_version': inputs.properties.modmenu_version,
+                'clothconfig_version': inputs.properties.clothconfig_version
     }
 }
 
